[package]
name = "wooting-analog-sdk-sys"
description = "FFI bindings to the Wooting Analog SDK"
version = "0.1.0"
readme = "README.md"
documentation = "https://docs.rs/wooting-analog-sdk-sys"
repository = "https://github.com/davidtwco/rust-wooting-sdk"
license = "MIT/Apache-2.0"
authors = ["David Wood <david@davidtw.co>"]
keywords = ["ffi", "wooting", "analog"]
categories = ["external-ffi-bindings"]
edition = "2018"

[dependencies]

[build-dependencies]
bindgen = "0.47.2"
cc = { version = "1.0.29", features = [ "parallel" ] }
pkg-config = "0.3.14"
