[package]
name = "wooting-sdk"
version = "0.1.0"
description = "Rust bindings for the Wooting Analog and RGB SDKs!"
readme = "README.md"
documentation = "https://docs.rs/wooting-sdk"
repository = "https://github.com/davidtwco/rust-wooting-sdk"
license = "MIT OR Apache-2.0"
authors = ["David Wood <david@davidtw.co>"]
keywords = ["wooting", "keyboard", "rgb", "analog"]
categories = ["api-bindings", "games"]
edition = "2018"

[dependencies]
lazy_static = "1.2.0"
wooting-analog-sdk-sys = { version = "0.1.0", path = "../wooting-analog-sdk-sys", optional = true }
wooting-rgb-sdk-sys = { version = "0.1.0", path = "../wooting-rgb-sdk-sys", optional = true }

[features]
default = [ "analog", "rgb" ]
analog = [ "wooting-analog-sdk-sys" ]
rgb = [ "wooting-rgb-sdk-sys" ]
